Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumberInteger.quorum
integer i = 5
number n = i
output i
output n