Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerNumberWrapped.quorum
class main
    action Main
        number n = 7.5
        integer i = n
    end
end